Bug 83099 - UI: Top area of formula bar is missing when expanding with Windows 7 default theme
Summary: UI: Top area of formula bar is missing when expanding with Windows 7 default ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.3.0.4 release
Hardware: Other Windows (All)
: medium normal
Assignee: Tomofumi Yagi
URL:
Whiteboard: BSA target:4.5.0
Keywords:
: 84366 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-08-26 14:30 UTC by Naruhiko Ogasawara
Modified: 2015-02-24 05:51 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot to describe the issue (190.25 KB, application/vnd.oasis.opendocument.graphics)
2014-08-26 14:30 UTC, Naruhiko Ogasawara
Details
Screenshot without Firefox theme (persona) with LibreOffice 4.3.1.2 (58.02 KB, image/png)
2014-09-17 07:51 UTC, Naruhiko Ogasawara
Details
Expandir linha de entrada (102.95 KB, image/jpeg)
2014-09-29 13:56 UTC, Bruno
Details
screenshot (52.23 KB, image/jpeg)
2014-11-24 12:32 UTC, baffclan
Details
A workaround patch (2.00 KB, patch)
2015-02-12 17:58 UTC, Tomofumi Yagi
Details
Workaround patch 2 (2.20 KB, patch)
2015-02-14 13:37 UTC, Tomofumi Yagi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Naruhiko Ogasawara 2014-08-26 14:30:30 UTC
Created attachment 105284 [details]
Screenshot to describe the issue

Problem description: 

1. Launch Calc in Windows 7 (with the default theme)
2. Click "Expand formula bar" button (figure 1)

Current behavior:
- Top area about two lines of the formula bar is missing (figure 2)
- And also "Collapse Formula Bar" button is also missing so we can't collapse the bar

Expected behavior:
- The formula bar appears well and we can see "Collapse Formula Bar" button 

NOTE: This problem occurs with Windows 7 default (aero) theme.  We don't have any issue with Windows 7 classic theme.
Operating System: Windows 7
Version: 4.4.0.0.alpha0+ Master
Comment 1 Naruhiko Ogasawara 2014-08-26 14:35:05 UTC
I only tried 4.3.0, but another user reported me we had same issue with 4.2, 4.1 and 4.0.  3.6 or older seems fine, maybe.
I tried Japanese Windows 7 but I heard we have same problem in German one in AskBot. see: http://ask.libreoffice.org/en/question/38800/collapse-formula-bar-button-is-missing-in-windows-7-default-theme/
Comment 2 raal 2014-09-17 07:37:22 UTC
Hello,
tested with LO 4.3.1, win7. I can not confirm. As I see on your screenshot, you are using personas in LO. Please try without personas. Thank you.
Comment 3 Naruhiko Ogasawara 2014-09-17 07:51:44 UTC
Created attachment 106412 [details]
Screenshot without Firefox theme (persona) with LibreOffice 4.3.1.2

Hello,

Sorry I didn't tried without Firefox theme (persona).  I turned "Tools" > "Option" > "Personalized" > "Firefox Theme" to "Plain look, do not use theme" and tried again and I hit this issue again.

Please show a screenshot I attached.
Comment 4 raal 2014-09-17 18:26:28 UTC
Hello,
I'm unable to reproduce, but I have not Japanese or German build. Maybe language specific. Tested on Czech system.
Comment 5 Bruno 2014-09-29 13:56:01 UTC
Created attachment 107070 [details]
Expandir linha de entrada

Windows 8, não acontece com todos os computadores

Windows 8, the error does not happen with all computers
Comment 6 Jacques Guilleron 2014-09-29 22:46:15 UTC
Hi all,

Since Bruno confirmed it, I set status to NEW.

Jacques
Comment 7 Jacques Guilleron 2014-09-30 07:21:40 UTC
*** Bug 84366 has been marked as a duplicate of this bug. ***
Comment 8 baffclan 2014-11-24 12:18:00 UTC
cannot reproduce with LibO-dev 4.5.0.0.alpha0+.

Version: 4.5.0.0.alpha0+
Build ID: cb6ced50c11ea71e5655c46e49f17f3b5921f526
TinderBox: Win-x86@51-TDF, Branch:MASTER, Time: 2014-11-23_10:18:50
Locale: ja_JP
Comment 9 baffclan 2014-11-24 12:32:51 UTC
Created attachment 109935 [details]
screenshot
Comment 10 Jacques Guilleron 2014-11-25 16:59:25 UTC
Hi,

I get this behaviour with 
LO 4.3.4.0.0+ Build ID: 77c6ce66696a997269b9fe4dfed1dc2e51ecd00e
TinderBox: Win-x86@42, Branch:libreoffice-4-3, Time: 2014-10-17_16:12:56
& Windows 7 Home Premium
but only if I increase 
Tools > Options > LibreOfficeDev > View > Scaling.
At 100%, the expand button has no effect.
But at 130%, after expanding, collapsing, expanding, the situation is the same as the one showed in the first attachment.

Jacques
Comment 11 Naruhiko Ogasawara 2015-02-08 10:53:39 UTC
In my observation, the problem seems solved partly; with "Large" icon, the formula bar works well, but with "Small" icon, we still have the issue with 4.4.0.3 and master.

Icon size can be set in Tools > Option > LibreOffice > View > Icon Size and Style.
Comment 12 Tomofumi Yagi 2015-02-12 17:58:47 UTC
Created attachment 113348 [details]
A workaround patch

I attached a workaround patch.
This patch modifies ToolBox::ImplFormat() method in vcl/source/window/toolbox.cxx.
An item included a ToolBox will be prevented to place in incorrect position.

Cause of the bug is follows.
1. When the new item is added, ToolBox::ImplFormat () places it to the new position.
  ToolBox::ImplFormat() determines whether or not the item is newly added, 
  using that the new item's Top Coordinate is 0.
  However, it seems that the non-new item's Top Coordinate is zero in some conditions(on Windows7 with Aero,etc...).

2.Unfortunately, mnMaxItemHeight variable(used to calculate the new position) holds the old value,immediately after the formula bar is expanded(not updated yet).

In that reason, the item is placed in incorrect position.
Comment 13 Tomofumi Yagi 2015-02-14 13:37:53 UTC
Created attachment 113378 [details]
Workaround patch 2
Comment 14 Commit Notification 2015-02-19 09:40:33 UTC
Tomofumi Yagi committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c7efcb1340ceee35fe3b8ffd9ed86b8cae57d9ce

tdf#83099 fix Top of formula bar is missing when expanding on Windows 7

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 15 Naruhiko Ogasawara 2015-02-24 05:51:03 UTC
I tried with:

Version: 4.5.0.0.alpha0+
Build ID: f09efe39da1a2a1cf89b718bc07ed75e0da1b602
TinderBox: Win-x86@62-TDF, Branch:MASTER, Time: 2015-02-23_22:31:27
Locale: ja_JP

and it seems to work well for me.