tdf#83099 fix Top of formula bar is missing when expanding on Windows 7

This is workaround patch.

ToolBox::ImplFormat() method places it to the new position, when the new
item is added.
ToolBox::ImplFormat() method determines whether or not the item is newly
added, using that the new item's Top Coordinate is 0.
However, it seems that the non-new item's Top Coordinate is 0 on Windows 7
with default(aero) theme, using small icons.
We also need to consider in this case.

Change-Id: I35cf81502799432f63e0920219fcbaac9050d81f
Reviewed-on: https://gerrit.libreoffice.org/14538
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>